# phrasely

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  Makefile  README.md  environment-ci.yaml  environment-cpu.yaml  environment-gpu.yaml  environment.yaml  environment_cpu.yaml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
data/: large_phrases.csv  sample_phrases.csv
notebooks/: cc100_gpu_pipeline.ipynb  coyo-700.ipynb  evaluate_hdbscan.ipynb  evaluate_phrasely.ipynb  phrasely_run_initial_pipeline.ipynb
src/phrasely/: pipeline.py  pipeline_result.py
src/phrasely/clustering/: hdbscan_clusterer.py
src/phrasely/data_loading/: __init__.py  base_loader.py  cc100_loader.py  cc100_offline_loader.py  coyo_loader.py  coyo_offline_loader.py  csv_loader.py  laion_loader.py  phrase_dataset_loader.py  s3_loader.py  wikipedia_loader.py  wikitext_loader.py
src/phrasely/embeddings/: phrase_embedder.py
src/phrasely/evaluation/: __init__.py  cohesion.py  dbcv_score.py  evaluator.py  silhouette_score.py  visualizer.py  visualizer_old.py
src/phrasely/medoids/: medoid_selector.py
src/phrasely/reduction/: __init__.py  reducer_protocol.py  svd_reducer.py  two_stage_reducer.py  visualization_reducer.py
src/phrasely/utils/: gpu_utils.py  logger.py  timing.py
tests/: conftest.py  test_caplog_demo.py  test_evaluator.py  test_hdbscan_clusterer.py  test_logger.py  test_medoid_selector.py  test_pipeline_smoke.py  test_svd_reducer.py  test_timing.py  test_two_stage_reducer.py  test_visualization_reducer.py
tests/clustering/: test_hdbscan_clusterer.py
tests/data_loading/: test_cc100_loaders.py
tests/evaluation/: test_cohesion.py  test_dbcv_score.py  test_evaluator.py  test_silhouette_score.py
tests/logging/: test_caplog_demo.py
tests/medoids/: test_medoid_selector.py
tests/reduction/: test_two_stage_reducer.py  test_visualization_reducer.py
