[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "phrasely"
version = "0.1.0"
description = "Phrase clustering and embedding pipeline (GPU default)"
authors = [
{ name = "Michael Mastroianni", email = "mmastroianni@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
"numpy",
"pandas",
"scikit-learn",
"hdbscan",
"sentence-transformers",
"tqdm",
"psutil",
"pyyaml",
"joblib"
]


[project.optional-dependencies]
dev = ["pytest", "flake8", "black", "mypy", "jupyterlab"]
gpu = ["cuml>=24.06", "cudf>=24.06", "cupy-cuda12x"]


[tool.setuptools.packages.find]
where = ["src"]